
[project]
name = "ppci"
version = "0.5.9"
description = "A compiler for ARM, X86, MSP430, xtensa and more implemented in pure Python"
readme = "readme.rst"
authors = [
    { name = "Windel Bouwman" }
]
license='BSD-2-Clause'
license-files = [ "license.txt" ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Assembly",
    "Programming Language :: C",
    "Programming Language :: Java",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Assemblers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Pre-processors",
]
keywords = ["compiler", "assembler", "embedded", "riscv", "x86", "arm", "stm8", "msp430", "webassembly", "xtensa"]

[project.urls]
homepage='https://ppci.readthedocs.io/'

[project.scripts]
ppci-archive = "ppci.cli.archive:archive"
ppci-asm = "ppci.cli.asm:asm"
ppci-build = "ppci.cli.build:build"
ppci-c3c = "ppci.cli.c3c:c3c"
ppci-cc = "ppci.cli.cc:cc"
ppci-dbg = "ppci.cli.dbg:dbg"
ppci-disasm = "ppci.cli.disasm:disasm"
ppci-hexdump = "ppci.cli.hexdump:hexdump"
ppci-hexutil = "ppci.cli.hexutil:hexutil"
ppci-java = "ppci.cli.java:java"
ppci-ld = "ppci.cli.link:link"
ppci-llc = "ppci.cli.llc:llc"
ppci-mkuimage = "ppci.cli.mkuimage:mkuimage"
ppci-objcopy = "ppci.cli.objcopy:objcopy"
ppci-objdump = "ppci.cli.objdump:objdump"
ppci-ocaml = "ppci.cli.ocaml:ocaml"
ppci-opt = "ppci.cli.opt:opt"
ppci-pascal = "ppci.cli.pascal:pascal"
ppci-pedump = "ppci.cli.pedump:pedump"
ppci-pycompile = "ppci.cli.pycompile:pycompile"
ppci-readelf = "ppci.cli.readelf:readelf"
ppci-wasm2wat = "ppci.cli.wasm2wat:wasm2wat"
ppci-wasmcompile = "ppci.cli.wasmcompile:wasmcompile"
ppci-wat2wasm = "ppci.cli.wat2wasm:wat2wasm"
ppci-wabt = "ppci.cli.wabt:wabt"
ppci-yacc = "ppci.cli.yacc:yacc"

[build-system]
requires = ["setuptools", "wheel", "flit_core >=3.11,<4"]

# TODO: go for PEP-517?
# build-backend = "setuptools.build_meta"
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
cache-dir = ".cache/ruff"

[tool.ruff.lint]
extend-select = [
    "E",
    "F",
    "Q",
    "SIM",   # flake8-simplify
    "B",     # bugbear
    "PIE",   # flake8-pie
    "UP",    # pyupgrade
]
extend-ignore = [
    "E203",  # Conflicts with black formatting
    "E501",  # line too long, already checked with black
    "B009",  # allow getattr usage
    "B010",  # allow setattr usage
    "B019",  # Allow lru_cache on methods
    "B024",  # Allow ABC without abstract methods
    "B027",  # Allow empty methods in abstract classes.
    "PIE790",  # Allow pass even if not required.
    "UP032",  # Allow .format
    "UP018",  # Allow bytes() call.
    "UP033",  # Use lru_cache for now, until 3.8 is end of life
    "SIM102",  # Allow nested if statements
    "SIM108",  # Ternary is not always nicer
    "SIM114",  # Allow similar if branches
    "SIM115",  # Allow open without context manager
]

[tool.pytest]
junit_family = "xunit1"

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"

[tool.pytest.logging]
log_level = "info"

[tool.coverage.run]
data_file = ".cache/.coverage"

[tool.coverage.xml]
output = ".cache/coverage.xml"

[tool.mypy]
cache_dir = ".cache/mypy"

[tool.flit.sdist]
include = [
    "readme.rst",
    "pyproject.toml",
    "examples/",
    "ppci/",
    "doc/",
    "test/",
    "librt/",
    "tools/",
]
